--- a/views/details.ejs
+++ b/views/details.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Message Details</title>
+    <link rel="stylesheet" href="/styles.css"">
   </head>
   <body>
     <h1>Message Details</h1>
@@ -9,6 +10,6 @@
     <p>Message: <%= message.text %></p>
     <p>Added: <%= message.added %></p>
 
-    <a href="/">Go back to the homepage</a>
+    <button><a href="/">Go back to the homepage</a></button>
   </body>
 </html>
