--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,7 @@
 <!-- footer.ejs -->
 <footer>
   <ul>
-      Website made by ya boi <a href="https://github.com/George-Gabechava">George G.</a>
+    <p> Website made by <a href="https://github.com/George-Gabechava">George Gabechava</a></p>
+    <p> <a href="https://github.com/George-Gabechava/TOP-Mini-Message-Board">Github Source Code</a></p>
   </ul>
 </footer>
