--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,6 +1,8 @@
+<!-- form.ejs -->
 <html>
   <head>
     <title>Create Form</title>
+    <link rel="stylesheet" href="/styles.css"">
   </head>
   <body>
     <h1>Add a new message</h1>
