--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <h1>
       <%= title %>
     </h1>
 
-    <h2>Create a new message: <a href="new">Click Here!</a></h2>
+    <button <h2><a href="new">Create A New Message</h2></a></button>
 
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
