--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,12 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+
+
 li {
   background-color: lightpink;
   margin-top: 2vh;
@@ -8,6 +17,10 @@ li {
   padding-bottom: 1vh;
   padding-top: 1vh;
   border: solid grey 2px;
+}
+
+li b {
+  font-size: larger;
 }
 
 button {
