--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
         <li>
-          <b><%= messages[i].user %>:</b> <%= messages[i].text %> 
+          <b><%= messages[i].name %>:</b> <%= messages[i].text %> 
           <br>
           <small><%= messages[i].added %></small>
           <br>
