changed variables for getDetails content

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,5 +3,6 @@
   <ul>
     <p> Website made by <a href="https://github.com/George-Gabechava">George Gabechava</a></p>
     <p> <a href="https://github.com/George-Gabechava/TOP-Mini-Message-Board">Github Source Code</a></p>
+    <p> Hosted by <a href="https://railway.com/">Railway</a></p>
   </ul>
 </footer>
