--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
           <small><%= messages[i].added %></small>
           <br>
           <button>
-            <a href="/details/<%= i %>">View Details</a>
+            <a href="/details/<%= messages[i].id %>">View Details</a>
           </button> 
         </li>
       <% } %>
