--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Message Details</h1>
-    <p><strong>User:</strong> <%= message.user %></p>
+    <p><strong>User:</strong> <%= message.name %></p>
     <p>Message: <%= message.text %></p>
     <p>Added: <%= message.added %></p>
 
