--- a/views/details.ejs
+++ b/views/details.ejs
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Message Details</title>
-    <link rel="stylesheet" href="/styles.css"">
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <h1>Message Details</h1>
     <p><strong>User:</strong> <%= message.name %></p>
-    <p>Message: <%= message.text %></p>
-    <p>Added: <%= message.added %></p>
+    <p><strong>Message:</strong> <%= message.text %></p>
+    <p><strong>Added:</strong> <%= message.added %></p>
 
     <button><a href="/">Go back to the homepage</a></button>
   </body>
