--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,19 +11,19 @@
 
     <button <h2><a href="new">Create A New Message</h2></a></button>
 
-    <ul>
+    <div>
       <% for (let i = 0; i < messages.length; i++) { %>
         <li>
           <b><%= messages[i].name %>:</b> <%= messages[i].text %> 
           <br>
-          <small><%= messages[i].added %></small>
+          <p><small><%= messages[i].added %></small></p>
           <br>
           <button>
             <a href="/details/<%= messages[i].id %>">View Details</a>
           </button> 
         </li>
       <% } %>
-    </ul>
+      </div>
     
     <%- include('footer'); %>
   </body>
