--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,17 +11,15 @@
 
     <button <h2><a href="new">Create A New Message</h2></a></button>
 
-    <div>
+    <div class="card">
       <% for (let i = 0; i < messages.length; i++) { %>
-        <li>
           <b><%= messages[i].name %>:</b> <%= messages[i].text %> 
           <br>
-          <p><small><%= messages[i].added %></small></p>
+          <p><smaller><%= messages[i].added %></smaller></p>
           <br>
           <button>
             <a href="/details/<%= messages[i].id %>">View Details</a>
           </button> 
-        </li>
       <% } %>
       </div>
     
