--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,7 @@ body {
   padding-left: 0px;
 }
 
-.card {
+li {
   background-color: lightpink;
   margin-top: 1vh;
   margin-bottom: 1vh;
@@ -21,11 +21,12 @@ body {
   padding-top: 1vh;
   border: solid grey 2px;
   font-size: large;
-  display: flex;
-  flex-direction: column;
 }
 
-/* General button styling - applies to ALL buttons */
+li b {
+  font-size: large;
+}
+
 button {
   box-shadow: 3px 4px lightgray;
   padding: 10px 20px;
@@ -39,9 +40,11 @@ button {
 
 form button {
   width: 100%; 
+  margin-top: 20px;
 }
 
-button a {
+button a, form button a {
+  text-decoration: none;
   color: black;
   font-size: inherit;
   width: 100%;
@@ -50,7 +53,6 @@ button a {
   align-items: center;
   justify-content: center;
 }
-
 
 #newMessage {
   display: flex;
